' Generated by UML Generator
' Encoded: hLNRQXin47tVhn3anQwzeS-cc8IKma8RGam_G5uDZiXQCfBM9KtpxzLTezquJtcnfT5SpfmvqjveGvKPZqEZdxauKKMFf1-erhV6ABuV3NIz53l-5yZNveap83rN_G1Duxs8TGF1gEY1l3Q4jDgC38JPa5rOE5ilHwLXG-xylxCOoUYB_awDjRhV44dDg3TaB-K0L3XJQtzMfS9YETbFYwr9NMfDfeNMP5B6fpo0YHaMIupS7Jmeq7Qtys7kkE1R6Rcp98b3Y7AhvYqH4n04KWAgZcMlRBkdHwYi2XYt3V707Csz_kJQcc-LeYzk-Qsmi4MqJxrYAzjCPa0LY8phARX48ePcRGLOekmk1gBkyO6Bhuz0A3aCYMcTcRPEPycPSpbIzJmVC0R7qY1FOJ1baYMBnH2IW4to0AgtVlG02rTUo9JhlO14jGD-YMmabxahOhpE-WWdgRopBvfryeCFy8iA2qzviQnUdK9v_qOqFGFY8an5usA1w2rg90VdCSmXngZANO6b1CvWgQKpHIpprSseEw6D6diZ8-Yo3zf2UvwNU8p5YdMMfDMXc9cykYgqFgQCLRAUY7WkTIJhJr7Xl0ZAU-RmPwQ8I_wPwoYfG7H-f_36wVfU5dJY7KeVlS-Cp4ktz1DOhBlzg4-wjnEblGbV7l9Rnxjm9UhdyOfNJwX_qPnpOCElEFkOXdc_Jb6iVi7HH-rBs-OFmiGSxqHywAMr50TiJU7ufbzVRrCykafj-s_hks_Ip8lbncQsd-d_
' URL: http://www.plantuml.com/plantuml/uml/hLNRQXin47tVhn3anQwzeS-cc8IKma8RGam_G5uDZiXQCfBM9KtpxzLTezquJtcnfT5SpfmvqjveGvKPZqEZdxauKKMFf1-erhV6ABuV3NIz53l-5yZNveap83rN_G1Duxs8TGF1gEY1l3Q4jDgC38JPa5rOE5ilHwLXG-xylxCOoUYB_awDjRhV44dDg3TaB-K0L3XJQtzMfS9YETbFYwr9NMfDfeNMP5B6fpo0YHaMIupS7Jmeq7Qtys7kkE1R6Rcp98b3Y7AhvYqH4n04KWAgZcMlRBkdHwYi2XYt3V707Csz_kJQcc-LeYzk-Qsmi4MqJxrYAzjCPa0LY8phARX48ePcRGLOekmk1gBkyO6Bhuz0A3aCYMcTcRPEPycPSpbIzJmVC0R7qY1FOJ1baYMBnH2IW4to0AgtVlG02rTUo9JhlO14jGD-YMmabxahOhpE-WWdgRopBvfryeCFy8iA2qzviQnUdK9v_qOqFGFY8an5usA1w2rg90VdCSmXngZANO6b1CvWgQKpHIpprSseEw6D6diZ8-Yo3zf2UvwNU8p5YdMMfDMXc9cykYgqFgQCLRAUY7WkTIJhJr7Xl0ZAU-RmPwQ8I_wPwoYfG7H-f_36wVfU5dJY7KeVlS-Cp4ktz1DOhBlzg4-wjnEblGbV7l9Rnxjm9UhdyOfNJwX_qPnpOCElEFkOXdc_Jb6iVi7HH-rBs-OFmiGSxqHywAMr50TiJU7ufbzVRrCykafj-s_hks_Ip8lbncQsd-d_
' Generated on: 2026-05-07T23:35:43.434436600

@startuml
skinparam classAttributeIconSize 0
hide circle

class Attendance {
  -student: Student
  -course: Course
  -todaysDate: Date
  -status: boolean
  --
  +Attendance()
  +Attendance(student: Student, course: Course, todaysDate: Date, status: boolean)
  +getStudent(): Student
  +getPresentStatus(): boolean
  +toString(): String
}

class Course {
  -courseId: String
  -courseName: String
  -credit: int
  -attendanceList: ArrayList<Attendance>
  -studentList: ArrayList<Student>
  --
  +Course()
  +Course(courseId: String, courseName: String, credit: int)
  +getCourseId(): String
  +getCourseName(): String
  +enrollStudent(s: Student): void
  +markAttendance(studentId: String, d: Date, present: boolean): void
  +getAttendencePercentage(rollno: String): void
  +getAttendanceList(): ArrayList<Attendance>
  +getStudentList(): ArrayList<Student>
  +getAttendanceReport(): void
}

class FileManager {
  +{static} saveAttendance(courses: ArrayList<Course>): void
  +{static} getCourseList(): ArrayList<Course>
  +{static} retrieveData(courseId: String): Course
}

class Instructor {
  +Instructor()
  +Instructor(instructorId: String, instructorName: String)
  +getInstructorId(): String
  +getInstructorName(): String
  +addCourse(courseName: String, courseId: String, credit: int): void
  +markAttendance(studentId: String, d: Date, present: boolean, courseId: String): void
  +viewAttendanceReport(courseId: String): void
}

class Student {
  +Student()
  +Student(rollNo: String, name: String)
  +getRollNo(): String
  +getName(): String
  +enrollCourse(courseName: String, courseId: String, credit: int): void
  +viewAttendance(courseId: String): void
}

abstract class User {
  #name: String
  #id: String
  --
  +User()
  +User(id: String, name: String)
  +getName(): String
  +getId(): String
}

Attendance *-- Student
Attendance *-- Course
Course o-- Attendance
Course o-- Student
FileManager ..> Course
Instructor --|> User
Student --|> User
@enduml